--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,21 @@
 .startButton {
-    height: 100px;
+    
     width: 100px;
+    display:block;
+    margin: 0 auto;
+    
+}
+.shells{
+    width: 500px;
+    display: block;
+    margin: 0 auto;
 }
 html {
 }
-
+.startPage{
+    width: 100%;
+    text-align: center;
+}
 .allDone {
     text-align: center;
     height: 100%;
