--- a/public/styles.css
+++ b/public/styles.css
@@ -10,21 +10,43 @@
     display: block;
     margin: 0 auto;
 }
+
 html {
+}
+.button{
+    background-color:#383838;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #000000;
+	display: block;
+    margin: 0 auto;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px black;
+}
+.enterUser{
+    display: block;
+    margin: 0 auto;
 }
 .startPage{
     width: 100%;
     text-align: center;
 }
+
 .allDone {
     text-align: center;
-    height: 100%;
+    height: 50%;
     width: 100%;
     font-size: 5em;
 }
 
 .target {
-    background-color: #333;
+    background-color: rgb(255, 0, 0);
     width: 20px;
     height: 20px;
     border: 1px solid white;
@@ -40,13 +62,28 @@ html {
     width: 20px;
     height: 20px;
     position: absolute;
-    border: 8px solid gray;
+    border: 8px solid rgb(215, 253, 0);
     border-radius: 50%;
     opacity: .5;
     top: -8px;
     left: -8px;
 }
-
+.countdown{
+    text-align: center; position: absolute; top: 50%; bottom: 500%; width: 100%;
+    font-size:10em;
+    animation: counter 1s infinite alternate;
+}
+@keyframes counter{
+    0%{
+        color:black;
+    }
+    50%{
+        color:red;
+    }
+    100%{
+        color:blue;
+    }
+}
 @keyframes cursorAnim {
     from {
         transform: scale(1);
@@ -76,7 +113,9 @@ html {
     animation: cursorAnim3 .5s forwards;
     border: 1px solid red;    
 }
-
+body{
+    background-color: lightgrey;
+}
 #health {
     
 }
